# sae-post-intervention-recovery

./: .gitignore  ACKNOWLEDGEMENTS.md  CITATION.cff  Makefile  README.md  REPRODUCIBILITY.md  SAFETY.md  environment.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
configs/: final_commands.md  ioi.env.example  refusal.env.example  tpp.env.example  unlearning.env.example
docs/: FILE_SELECTION.md  GITHUB_PUBLISHING.md  PAPER_ARTIFACTS.md  PROJECT_STRUCTURE.md  RELEASE_CHECKLIST.md  THIRD_PARTY.md
experiments/ioi/: README.md  ioi_recovery.py
experiments/refusal/: README.md  baseline_oabd_refusal_recovery_crosslayer.py  baseline_refusal_sae_recovery.py  baseline_refusal_sae_recovery_crosslayer_v4.py  recovery_path_attribution.py
experiments/tpp/: README.md  make_paper_assets.py  run_tpp_recovery_external.sh
experiments/unlearning/: README.md  baseline_oabd_defended_suffix_fixedprefix_choiceonly_dualsummary.py  permutation_seqwide.py  posthoc_eval_unlearning_recovery.py  prepare_unlearning_posthoc_interventions.py  recovery_unlearning_choice_only_seqwide_act.py  (+1 more)
manifests/: refusal_advbench_strict_valid_24.json  refusal_feature_size_sweep_k_values.json  refusal_harmbench_strict_valid_43.json  wmdp_bio_strict_valid_91_flips.json
scripts/: compute_uncertainty_intervals.py  inspect_results.py  reproduce_ioi.sh  reproduce_refusal.sh  reproduce_tpp.sh  reproduce_unlearning.sh  run_advbench_budget_sweep_safe.py  run_harmbench_strict_valid_safe.py  safety_check_release.py
tests/: page-check.mjs  test_ci_workflow.py  test_public_artifact_safety.py
(+33 files in other folders)
